Fix: Eliminar emojis, actualizar Tailwind v4, agregar Footer y mejorar Login con recordarme y toast

--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
         <!-- Controles para móvil -->
         <div id="mobile-controls">
             <div class="controls-layout">
-                <div class="dpad">
-                    <button class="control-btn btn-up" data-key="ArrowUp">▲</button>
-                    <button class="control-btn btn-left" data-key="ArrowLeft">◄</button>
-                    <button class="control-btn btn-right" data-key="ArrowRight">►</button>
-                    <button class="control-btn btn-down" data-key="ArrowDown">▼</button>
+                <div class="joystick-container">
+                    <div class="joystick-base">
+                        <div class="joystick-stick" id="joystick"></div>
+                    </div>
                 </div>
                 <div class="action-buttons">
                     <button class="btn-bomb">💣</button>
